--- a/docs/TemplateData/style.css
+++ b/docs/TemplateData/style.css
@@ -1,8 +1,30 @@
-body { padding: 0; margin: 0 }
-#unity-container { position: absolute }
-#unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
+body {
+    position:absolute;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+#unity-container {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+}
+    #unity-container.unity-desktop {
+        width: 100%;
+        height: 100%;
+        margin:0;
+        padding:0;
+    }
 #unity-container.unity-mobile { width: 100%; height: 100% }
-#unity-canvas { background: #231F20 }
+#unity-canvas {
+    background: #231F20;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    position:absolute;
+}
 .unity-mobile #unity-canvas { width: 100%; height: 100% }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
 #unity-logo { width: 154px; height: 130px; background: url('unity-logo-dark.png') no-repeat center }
